--- a/x86_Basics/16_32_64bits.md
+++ b/x86_Basics/16_32_64bits.md
@@ -6,10 +6,53 @@ x86 어셈블리를 사용할 때, 16, 32 64비트 아키택처의 차이점을 
 
 ## Registers
 
-### 16 bit
-
-### 32 bit
-
 ### 16-bit
+
+8086과 후속 x86프로세서에서 찾을 수 있는 레지스터들은 다움과 같음.
+
+AX, BX, CX, DX, SP, BP, SI, DI, CS, DS, SS, ES, IP 그리고 EFLAGS.
+
+이들은 전부 16비트 폭을 가짐.
+
+<br/>
+
+DOS에서 32비트 윈도우까지는 "debug.exe" 라는 8086에 대해 배울때 매우 도움되는 프로그램을 DOS 쉘에서 실행할 수 있음.
+
+만약 DOSBox나 FreeDOS를 사용한다면 [FreeDOS에서 재공](https://www.ibiblio.org/pub/micro/pc-stuff/freedos/files/distributions/1.2/repos/pkg-html/debug.html)하는 "debug.exe" 를 사용할 수 있음.
+
+#### AX, BX, CX, DX
+
+이 범용 레지스터는 8-bit 레지스터로도 접근이 가능함.
+
+AX = AH (high 8-bit), AL (low 8-bit) 임.
+
+#### SI, DI
+
+이 레지스터들은 데이터 공간에 대한 오프셋으로 사용됨. 기본적으로 SI 는 DS 데이터 세그먼트의 오프셋이고, DI 는 ES 엑스트라 세그먼트의 오프셋으로 사용됨. 하지만 둘다 오버라이드가 가능함.
+
+#### SP
+
+이것은 스택 포인터, 주로 스택 세그먼트 SS의 오프셋임. 데이터는 임시 저장을 위해 스택 위로 쌓이게 되고, 필요할 때 위에서 빠지게 됨.
+
+#### BP
+
+스택 프레임, 주로 스택 세그먼트 SS 의 오프셋으로 취급됨. 서브루틴이 호출되었을 때, 서브루틴의 파라미터들은 주로 스택에 밀어 넣어짐. 그리고 BP 는 서브루틴이 실행될 때 SP 의 값으로 설정됨. 
+BP는 중간에 스택이 얼마나 사용되었는지에 상관 없이 스택에 있는 파라미터들을 찾는데 사용될 수 있음.
+
+#### CS, DS, SS, ES
+
+세그먼트 포인더들. 각각 code segment, data segment, stack segment 그리고 extra segment 메모리의 오프셋임.
+
+#### IP
+
+인스트럭션 포인터. 코드 세그먼트 CS 의 오프셋임. 현재 실행중인 지침을 향함. (points) 
+
+#### FLAGS (F)
+
+프로세서의 현재 상태를 나타내는 (어쩔때는 설정하는) 다수의 single-bit 들임.
+
+### 32-bit
+
+### 64-bit
 
 ### 128-bit, 256-bit and 512-bit (SSE/AVX)
